# metric-collectors-simulations

./: .dockerignore  .example.env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  settings.json
dockerfiles/: ingestionservice.Dockerfile  packageservice.Dockerfile  processorworker.Dockerfile  read.Dockerfile  subscriptionservice.Dockerfile
guides/: .gitignore  uv.md
infrastructures/nginx/: Dockerfile  nginx.local.conf
services/alert-service/app/: pyproject.toml
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/app/: main.py
services/package-service/: .example.env  Dockerfile  database.db  pyproject.toml
services/package-service/app/: config.py  main.py
services/package-service/app/dbs/: sqlites.py
services/processor-service/: .example.env  Dockerfile  main.py  pyproject.toml
services/processor-service/app/: main.py  telebot.py  utils.py
services/subscription-service/: .dockerignore  Dockerfile  pyproject.toml
services/subscription-service/app/: main.py  requirements.txt
