[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "metric-ingestion-models",
    "pika>=1.3.2",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
metric-ingestion-models = { workspace = true, editable = true }
