[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psutil>=7.2.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.30",
    "uvicorn>=0.40.0",
]
