[project]
name = "package-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "metric-ingestion",
    "metric-ingestion-models",
    "pika>=1.3.2",
    "psutil>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "shared-utils",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.30",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
shared-utils = { workspace = true, editable = true }
metric-ingestion = { workspace = true, editable = true }
metric-ingestion-models = { workspace = true, editable = true }
